objects/smagicinteract__Message_Action__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>smagicinteract__Action__c</referenceTo>
        <relationshipLabel>Message Actions</relationshipLabel>
        <relationshipName>Message_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Message Actions</relationshipLabel>
        <relationshipName>Message_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Incoming_SMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incoming SMS</label>
        <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
        <relationshipLabel>Message Actions</relationshipLabel>
        <relationshipName>Message_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Message Actions</relationshipLabel>
        <relationshipName>Message_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS History</label>
        <referenceTo>smagicinteract__smsMagic__c</referenceTo>
        <relationshipLabel>Message Actions</relationshipLabel>
        <relationshipName>Message_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Message Action</label>
    <listViews>
        <fullName>Nolan_Daigle_Message_Action</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Message Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>